2009-03-22  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Die.
	(elisp-site-file-install): Allow for extra version identifier in
	the name of the source file, i.e. install 50${PN}-gentoo-${PV}.el
	as 50${PN}-gentoo.el. Output a warning if the file name doesn't
	match a pattern that would be recognised by elisp-site-regen.

2009-03-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Explicitly assign S=${WORKDIR}
	in the "simple elisp" case.

2009-03-15  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (inherit): Inherit eutils. Don't inherit base.
	(elisp_src_prepare): Automatically apply patches in ELISP_PATCHES.

2009-03-07  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove all code related
	to site-start.el; it is now installed by emacs-common-gentoo.

2009-02-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (inherit): Inherit base.eclass.
	(EXPORT_FUNCTIONS): Add case statement for EAPI.
	(elisp_src_prepare): New function, calls autopatch feature from
	base.eclass.
	(elisp_src_unpack): Ditto for EAPI 0 or 1.
	(elisp_src_configure): New function, does nothing.

2009-02-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Output ebuild phase
	in einfo messages. Omit full directory path.

2009-02-13  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove workaround for
	empty T variable in Paludis, after one year of transition time.
	Add test for existence of temporary directory.

2009-02-07  Christian Faulhammer  <fauli@gentoo.org>

	* elisp.eclass (elisp_src_unpack, elisp_src_install): Remove die
	messages.

2009-01-31  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove backwards
	compatibility kludge related to old versions of this eclass.

2008-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Make sure that